| Bug #25431 | Adding index to table with BLOB is not done on-line | ||
|---|---|---|---|
| Submitted: | 5 Jan 2007 12:32 | Modified: | 30 Apr 2007 8:20 |
| Reporter: | Martin Skold | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | Any |
| Assigned to: | justin he | Target Version: | |
[25 Apr 2007 2:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25362 ChangeSet@1.2553, 2007-04-25 09:56:04+08:00, Justin.He@dev3-240.dev.cn.tlan +2 -0 Bug#25431, Adding index to table with BLOB is not done on-line add a new method is_equal in class Field_blob to compare BLOB field when alter table
[27 Apr 2007 10:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/25595 ChangeSet@1.2497, 2007-04-27 12:21:23+02:00, tomas@whalegate.ndb.mysql.com +2 -0 Bug#25431, Adding index to table with BLOB is not done on-line add a new method is_equal in class Field_blob to compare BLOB field when alter table
[28 Apr 2007 19:34]
Bugs System
Pushed into 5.1.18-beta
[30 Apr 2007 8:20]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.18 changelog.
[9 May 2007 3:17]
Guangbao Ni
merge into mysql-5.1-new-ndb tree
[10 May 2007 12:56]
Bugs System
Pushed into 5.1.19-beta

Description: create table nationaldish (DishID int(10) unsigned NOT NULL AUTO_INCREMENT, CountryCode char(3) NOT NULL, DishTitle varchar(64) NOT NULL, Recipe text, calories smallint(5) unsigned DEFAULT NULL, PRIMARY KEY (DishID) ) ENGINE=ndbcluster; create index i on nationaldish(countrycode,calories); How to repeat: Run above and use ndb_show_tables to verify that table id of nationaldish has changed.