Bug#25431, Adding index to table with BLOB is not done on-line add a new method is_equal in class Field_blob to compare BLOB field when alter table

sql/field.cc:
  add a method compare_str_field_flags in class Field_str
  add a method is_equal in class Field_blob to compare BLOB field when alter table
sql/field.h:
  add corresponding declaration of new method in class definition